--- a/_posts/2017-04-24-javabase.md
+++ b/_posts/2017-04-24-javabase.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: ja基础
+title: java基础
 subtitle: 
 author: wetson
 date: 2017-04-24 20:00:34 +0800
 categories: 
 tag: 
 ---
-# java基础
+
 
 ### 自动装箱自动拆箱
 
